--- a/Jquery_CRUD_MVC/Web.config
+++ b/Jquery_CRUD_MVC/Web.config
@@ -13,11 +13,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
   </appSettings>
   <system.web>
+    <authorization>
+      <allow users="*" />
+    </authorization>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -42,6 +47,10 @@
   </system.codedom>
   <connectionStrings>
     <add name="GitExamplesEntities" connectionString="metadata=res://*/Models.MyInternalDataModel.csdl|res://*/Models.MyInternalDataModel.ssdl|res://*/Models.MyInternalDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=GitExamples;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <add name="GitExamplesEntities1" connectionString="metadata=res://*/Models.Model1conn.csdl|res://*/Models.Model1conn.ssdl|res://*/Models.Model1conn.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=122.160.173.123\Uttaraonsql;initial catalog=GitExamples;persist security info=True;user id=ankush;password=ankush@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
