--- a/Jquery_CRUD_MVC/Jquery_CRUD_MVC.csproj
+++ b/Jquery_CRUD_MVC/Jquery_CRUD_MVC.csproj
@@ -125,11 +125,14 @@
     <Content Include="Models\MyInternalDataModel.edmx.diagram">
       <DependentUpon>MyInternalDataModel.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Ajax\GetRecords.cshtml" />
   </ItemGroup>
   <ItemGroup>
